--- a/src/resources/views/Sell.fxml
+++ b/src/resources/views/Sell.fxml
@@ -16,18 +16,22 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.sellController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.sellController">
     <children>
-        <TableView fx:id="itemTable" layoutX="25.0" layoutY="143.0" onMouseClicked="#getSelected" prefHeight="341.0" prefWidth="776.0">
-            <columns>
-                <TableColumn fx:id="item_no" prefWidth="96.99996948242188" text="Item_no" />
-                <TableColumn fx:id="name" prefWidth="230.00003051757812" text="Name" />
-                <TableColumn fx:id="quantity" prefWidth="101.0" text="Quantity" />
-                <TableColumn fx:id="sellPrice" prefWidth="112.0" text="Sell Price" />
-                <TableColumn fx:id="Total" prefWidth="120.0" text="Total" />
-                <TableColumn fx:id="itemProfit" prefWidth="117.0" text="Profit" />
-            </columns>
-        </TableView>
+      <Pane layoutX="16.0" layoutY="158.0" prefHeight="434.0" prefWidth="812.0" styleClass="formbody">
+         <children>
+              <TableView fx:id="itemTable" layoutX="18.0" layoutY="16.0" onMouseClicked="#getSelected" prefHeight="396.0" prefWidth="776.0">
+                  <columns>
+                      <TableColumn fx:id="item_no" prefWidth="96.99996948242188" text="Item_no" />
+                      <TableColumn fx:id="name" prefWidth="230.00003051757812" text="Name" />
+                      <TableColumn fx:id="quantity" prefWidth="101.0" text="Quantity" />
+                      <TableColumn fx:id="sellPrice" prefWidth="112.0" text="Sell Price" />
+                      <TableColumn fx:id="Total" prefWidth="120.0" text="Total" />
+                      <TableColumn fx:id="itemProfit" prefWidth="117.0" text="Profit" />
+                  </columns>
+              </TableView>
+         </children>
+      </Pane>
         <JFXButton fx:id="back" layoutX="25.0" layoutY="612.0" onMouseClicked="#backMenu" prefHeight="56.0" prefWidth="148.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
             <graphic>
                 <ImageView fitHeight="37.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
@@ -38,63 +42,67 @@
                 <Font size="27.0" />
             </font>
         </JFXButton>
-        <AnchorPane fx:id="invoicepane" layoutX="837.0" layoutY="139.0" prefHeight="264.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
+        <AnchorPane fx:id="invoicepane" layoutX="853.0" layoutY="160.0" prefHeight="253.0" prefWidth="489.0" styleClass="formbody">
             <children>
+            <Pane layoutX="245.0" layoutY="9.0" prefHeight="180.0" prefWidth="238.0" styleClass="formbody">
+               <children>
+                  <Text fill="#8a0000" layoutX="-36.0" layoutY="-23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pay Mode" wrappingWidth="78.00001457333565" x="50.0" y="50.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
                 <JFXDatePicker fx:id="date" layoutX="43.0" layoutY="31.0" onMouseEntered="#getToday" prefHeight="28.0" prefWidth="180.0" promptText="Date" />
-                <JFXTextField fx:id="currinvoice" layoutX="43.0" layoutY="84.0" prefHeight="25.0" prefWidth="180.0" promptText="Invoice ID" />
-                <JFXComboBox fx:id="shopid" layoutX="43.0" layoutY="133.0" onAction="#fillShopCombo" onMouseClicked="#fillShopCombo" prefHeight="26.0" prefWidth="180.0" promptText="Shop ID" />
+                <JFXTextField fx:id="currinvoice" layoutX="43.0" layoutY="97.0" prefHeight="25.0" prefWidth="180.0" promptText="Invoice ID" />
+                <JFXComboBox fx:id="shopid" layoutX="43.0" layoutY="156.0" onAction="#fillShopCombo" onMouseClicked="#fillShopCombo" prefHeight="26.0" prefWidth="180.0" promptText="Shop ID" />
                 <!--<JFXTextField fx:id="shopid" layoutX="268.0" layoutY="77.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop ID" />-->
                 <!--<JFXTextField fx:id="shopname" editable="false" layoutX="287.0" layoutY="112.0" onMouseClicked="#getName" prefHeight="25.0" prefWidth="180.0" promptText="Shop Name" />-->
-                <JFXRadioButton fx:id="cash" layoutX="289.0" layoutY="43.0" onMouseClicked="#paymode" selected="true" text="Cash" />
-                <JFXRadioButton fx:id="cheque" layoutX="384.0" layoutY="43.0" onMouseClicked="#paymode" text="Cheque" />
+                <JFXRadioButton fx:id="cash" layoutX="286.0" layoutY="47.0" onMouseClicked="#paymode" selected="true" text="Cash" />
+                <JFXRadioButton fx:id="cheque" layoutX="398.0" layoutY="48.0" onMouseClicked="#paymode" text="Cheque" />
                 <JFXComboBox fx:id="cheque_no" layoutX="286.0" layoutY="84.0" prefHeight="26.0" prefWidth="180.0" promptText="Select Cheque ID" />
 
-                <JFXButton fx:id="addinvoice" layoutX="354.0" layoutY="211.0" onMouseClicked="#addInvoice" prefHeight="32.0" prefWidth="130.0" styleClass="button2" stylesheets="@../styles/main.css" text="Save Invoice" />
-            <JFXButton id="addcheque" fx:id="addinvoice1" layoutX="340.0" layoutY="121.0" onMouseClicked="#addChequeDialog" prefHeight="37.0" prefWidth="130.0" style="-fx-background-color: grey;" styleClass="button2" text="Add Cheque" textFill="WHITE">
+                <JFXButton fx:id="addinvoice" layoutX="340.0" layoutY="201.0" onMouseClicked="#addInvoice" prefHeight="32.0" prefWidth="130.0" styleClass="button2" stylesheets="@../styles/main.css" text="Save Invoice" />
+            <JFXButton id="addcheque" fx:id="addinvoice1" layoutX="340.0" layoutY="130.0" onMouseClicked="#addChequeDialog" prefHeight="37.0" prefWidth="130.0" styleClass="button3" text="Add Cheque" textFill="WHITE">
                <font>
                   <Font size="12.0" />
                </font>
             </JFXButton>
-            <Text layoutX="239.0" layoutY="-15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pay Mode" wrappingWidth="78.00001457333565" x="50.0" y="50.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
 
             </children>
 
         </AnchorPane>
-        <AnchorPane fx:id="itempane" disable="true" layoutX="837.0" layoutY="417.0" prefHeight="252.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
+        <AnchorPane fx:id="itempane" disable="true" layoutX="853.0" layoutY="426.0" prefHeight="243.0" prefWidth="489.0" styleClass="formbody">
             <children>
                 <JFXTextField fx:id="itemId" layoutX="43.0" layoutY="20.0" prefHeight="25.0" prefWidth="180.0" promptText="Item Id" />
                 <JFXTextField fx:id="itemName" editable="false" layoutX="298.0" layoutY="20.0" onMouseClicked="#getName" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
                 <JFXTextField fx:id="itemquantity" layoutX="43.0" layoutY="66.0" prefHeight="25.0" prefWidth="180.0" promptText="Quantity" />
                 <JFXTextField fx:id="itemSellPrice" layoutX="43.0" layoutY="121.0" prefHeight="25.0" prefWidth="180.0" promptText="Sell Price" />
-                <JFXButton fx:id="add" layoutX="395.0" layoutY="202.0" onMouseClicked="#addItem" prefHeight="32.0" prefWidth="86.0" styleClass="button2" stylesheets="@../styles/main.css" text="Add" />
+                <JFXButton fx:id="add" layoutX="345.0" layoutY="196.0" onMouseClicked="#addItem" prefHeight="37.0" prefWidth="130.0" styleClass="button2" stylesheets="@../styles/main.css" text="Add" />
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="27.0" layoutY="495.0" prefHeight="103.0" prefWidth="221.0" style="-fx-background-color: #69ef6d; -fx-background-radius: 50;" styleClass="button2" stylesheets="@../styles/main.css">
+        <AnchorPane layoutX="231.0" layoutY="612.0" prefHeight="57.0" prefWidth="281.0" styleClass="borders" stylesheets="@../styles/main.css">
             <children>
-                <Text layoutX="53.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Income">
+                <Text layoutX="14.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Income : ">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
-                <Text fx:id="income" fill="#1e1dcf" layoutX="70.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.00">
+                <Text fx:id="income" fill="#ce1e1e" layoutX="147.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.00">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="578.0" layoutY="495.0" prefHeight="103.0" prefWidth="221.0" style="-fx-background-color: #69ef6d; -fx-background-radius: 50;" styleClass="button2">
+        <AnchorPane layoutX="526.0" layoutY="612.0" prefHeight="57.0" prefWidth="300.0" styleClass="borders">
             <children>
-                <Text fx:id="totalShow" layoutX="62.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Profit">
+                <Text fx:id="totalShow" layoutX="14.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Profit : ">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
-                <Text fx:id="profit" fill="#1e1dcf" layoutX="70.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.00">
+                <Text fx:id="profit" fill="#ce1e1e" layoutX="132.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.00">
                     <font>
                         <Font size="20.0" />
                     </font>
