--- a/src/resources/views/reports.fxml
+++ b/src/resources/views/reports.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
@@ -31,13 +31,13 @@
       <AnchorPane layoutX="796.0" layoutY="168.0" prefHeight="445.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
          <children>
             <JFXButton fx:id="generate_report" layoutX="315.0" layoutY="374.0" onMouseClicked="#generateReport" prefHeight="37.0" prefWidth="148.0" styleClass="button2" stylesheets="@../styles/main.css" text="Generate Report" />
-            <RadioButton fx:id="shop_reports_radio" layoutX="43.0" layoutY="40.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="226.0" text="Shopwise Reports Generating" />
-            <RadioButton fx:id="time_reports_radio" layoutX="43.0" layoutY="155.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="226.0" text="Time Range Reports Generating" />
             <ComboBox fx:id="shop_list" layoutX="81.0" layoutY="84.0" prefHeight="25.0" prefWidth="303.0" promptText="Select the Shop" />
-            <DatePicker fx:id="from_date" disable="true" layoutX="156.0" layoutY="189.0" prefHeight="25.0" prefWidth="226.0" />
+            <DatePicker fx:id="from_date" layoutX="156.0" layoutY="189.0" prefHeight="25.0" prefWidth="226.0" />
             <Label layoutX="81.0" layoutY="189.0" prefHeight="25.0" prefWidth="49.0" text="From" />
-            <DatePicker fx:id="to_date" disable="true" layoutX="157.0" layoutY="229.0" prefHeight="25.0" prefWidth="226.0" />
+            <DatePicker fx:id="to_date" layoutX="157.0" layoutY="229.0" prefHeight="25.0" prefWidth="226.0" />
             <Label layoutX="82.0" layoutY="229.0" prefHeight="25.0" prefWidth="49.0" text="To" />
+            <CheckBox fx:id="shop_reports_check" layoutX="43.0" layoutY="44.0" mnemonicParsing="false" onAction="#enableSelections" prefHeight="17.0" prefWidth="191.0" text="Shop Based Reports Generating" />
+            <CheckBox fx:id="time_reports_check" layoutX="43.0" layoutY="159.0" mnemonicParsing="false" onAction="#enableSelections" prefHeight="17.0" prefWidth="191.0" text="Time Range Reports Generating" />
          </children>
       </AnchorPane>
       <JFXButton fx:id="back" layoutX="39.0" layoutY="621.0" onMouseClicked="#backMenu" prefHeight="49.0" prefWidth="148.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
