--- a/src/resources/views/reports.fxml
+++ b/src/resources/views/reports.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
@@ -32,11 +31,9 @@
          <children>
             <JFXButton fx:id="generate_report" layoutX="315.0" layoutY="374.0" onMouseClicked="#generateReport" prefHeight="37.0" prefWidth="148.0" styleClass="button2" stylesheets="@../styles/main.css" text="Generate Report" />
             <ComboBox fx:id="shop_list" layoutX="77.0" layoutY="67.0" prefHeight="25.0" prefWidth="353.0" promptText="Select the Shop" />
-            <DatePicker fx:id="from_date" layoutX="183.0" layoutY="191.0" prefHeight="25.0" prefWidth="226.0" />
-            <Label layoutX="108.0" layoutY="191.0" prefHeight="25.0" prefWidth="49.0" text="From" />
-            <DatePicker fx:id="to_date" layoutX="184.0" layoutY="231.0" prefHeight="25.0" prefWidth="226.0" />
-            <Label layoutX="109.0" layoutY="231.0" prefHeight="25.0" prefWidth="49.0" text="To" />
             <CheckBox fx:id="time_reports_check" layoutX="79.0" layoutY="159.0" mnemonicParsing="false" onAction="#enableSelections" prefHeight="17.0" prefWidth="191.0" text="Time Range Reports Generating" />
+            <JFXDatePicker fx:id="from_date" layoutX="146.0" layoutY="190.0" prefHeight="28.0" prefWidth="226.0" promptText="From" />
+            <JFXDatePicker fx:id="to_date" layoutX="146.0" layoutY="230.0" prefHeight="28.0" prefWidth="226.0" promptText="To" />
          </children>
       </AnchorPane>
       <JFXButton fx:id="back" layoutX="39.0" layoutY="621.0" onMouseClicked="#backMenu" prefHeight="49.0" prefWidth="148.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
