--- a/src/resources/views/buy.fxml
+++ b/src/resources/views/buy.fxml
@@ -62,9 +62,9 @@
        </AnchorPane>
       <AnchorPane layoutX="761.0" layoutY="415.0" prefHeight="259.0" prefWidth="558.0" styleClass="formbody" stylesheets="@../styles/main.css">
          <children>
-            <JFXTextField fx:id="itemId" layoutX="31.0" layoutY="24.0" onInputMethodTextChanged="#fetchData" prefHeight="32.0" prefWidth="184.0" promptText="Item Id" />
+            <JFXTextField fx:id="itemId" layoutX="31.0" layoutY="24.0" onInputMethodTextChanged="#fetchData" prefHeight="32.0" prefWidth="184.0" promptText="Item Name" />
             <JFXButton fx:id="addItem" layoutX="427.0" layoutY="198.0" onMouseClicked="#saveItem" prefHeight="37.0" prefWidth="111.0" styleClass="button2" text="Save" />
-            <JFXTextField fx:id="itemName" editable="false" layoutX="295.0" layoutY="28.0" onMouseClicked="#fetchData" prefHeight="32.0" prefWidth="207.0" promptText="Name" />
+            <JFXTextField fx:id="itemName" editable="false" layoutX="295.0" layoutY="28.0" onMouseClicked="#fetchData" prefHeight="32.0" prefWidth="207.0" promptText="Item Id" />
             <JFXTextField fx:id="itemQuantity" layoutX="32.0" layoutY="110.0" prefHeight="32.0" prefWidth="184.0" promptText="Quantity" />
             <JFXTextField fx:id="itemBuyPrice" layoutX="31.0" layoutY="191.0" prefHeight="32.0" prefWidth="184.0" promptText="Buy Price" />
             <JFXTextField fx:id="itemSellPrice" layoutX="294.0" layoutY="112.0" prefHeight="32.0" prefWidth="210.0" promptText="Sell Price" />
