--- a/src/resources/views/Sell.fxml
+++ b/src/resources/views/Sell.fxml
@@ -55,7 +55,7 @@
             </Pane>
                 <JFXDatePicker fx:id="date" layoutX="43.0" layoutY="31.0" onMouseEntered="#getToday" prefHeight="28.0" prefWidth="180.0" promptText="Date" />
                 <JFXTextField fx:id="currinvoice" layoutX="43.0" layoutY="97.0" prefHeight="25.0" prefWidth="180.0" promptText="Invoice ID" />
-                <JFXComboBox fx:id="shopid" layoutX="43.0" layoutY="156.0" onAction="#fillShopCombo" prefHeight="26.0" prefWidth="180.0" promptText="Shop ID" />
+                <JFXTextField fx:id="shopid" layoutX="43.0" layoutY="156.0" prefHeight="26.0" prefWidth="180.0" promptText="Shop Name" />
                 <!--<JFXTextField fx:id="shopid" layoutX="268.0" layoutY="77.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop ID" />-->
                 <!--<JFXTextField fx:id="shopname" editable="false" layoutX="287.0" layoutY="112.0" onMouseClicked="#getName" prefHeight="25.0" prefWidth="180.0" promptText="Shop Name" />-->
                 <JFXRadioButton fx:id="cash" layoutX="286.0" layoutY="47.0" onMouseClicked="#paymode" selected="true" text="Cash" />
