--- a/src/resources/views/buy.fxml
+++ b/src/resources/views/buy.fxml
@@ -46,7 +46,7 @@
                <JFXButton fx:id="addInvoice" layoutX="427.0" layoutY="208.0" onMouseClicked="#saveInvoice" prefHeight="37.0" prefWidth="111.0" styleClass="button2" stylesheets="@../styles/main.css" text="Save" />
             <JFXComboBox fx:id="cheque_no" editable="true" layoutX="31.0" layoutY="80.0" prefHeight="25.0" prefWidth="347.0" promptText="Select the Cheque Number" />
             <JFXButton fx:id="addCheque" layoutX="426.0" layoutY="78.0" onMouseClicked="#addChequeDialog" prefHeight="37.0" prefWidth="111.0" styleClass="button3" stylesheets="@../styles/main.css" text="Add Cheque" />
-            <JFXComboBox fx:id="shop_id" editable="true" layoutX="31.0" layoutY="136.0" prefHeight="25.0" prefWidth="346.0" promptText="Select the Shop" />
+            <JFXTextField fx:id="shop_name" layoutX="31.0" layoutY="136.0" prefHeight="25.0" prefWidth="346.0" promptText="Select the Shop" />
             <JFXDatePicker fx:id="date_issue" layoutX="31.0" layoutY="188.0" prefHeight="25.0" prefWidth="351.0" promptText="Date Issue" />
             <Text fx:id="error1" fill="#dd1111" layoutX="31.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* Please Fill the Required Fields" visible="false">
                <font>
