--- a/src/resources/views/Sell.fxml
+++ b/src/resources/views/Sell.fxml
@@ -51,6 +51,7 @@
                         <Font size="14.0" />
                      </font>
                   </Text>
+                  <JFXRadioButton fx:id="due" layoutX="94.0" layoutY="39.0" onMouseClicked="#paymode" text="Due" />
                </children>
             </Pane>
                 <JFXDatePicker fx:id="date" layoutX="43.0" layoutY="31.0" onMouseEntered="#getToday" prefHeight="28.0" prefWidth="180.0" promptText="Date" />
@@ -58,7 +59,7 @@
                 <JFXTextField fx:id="shopid" layoutX="43.0" layoutY="156.0" prefHeight="26.0" prefWidth="180.0" promptText="Shop Name" />
                 <!--<JFXTextField fx:id="shopid" layoutX="268.0" layoutY="77.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop ID" />-->
                 <!--<JFXTextField fx:id="shopname" editable="false" layoutX="287.0" layoutY="112.0" onMouseClicked="#getName" prefHeight="25.0" prefWidth="180.0" promptText="Shop Name" />-->
-                <JFXRadioButton fx:id="cash" layoutX="286.0" layoutY="47.0" onMouseClicked="#paymode" selected="true" text="Cash" />
+                <JFXRadioButton fx:id="cash" layoutX="275.0" layoutY="49.0" onMouseClicked="#paymode" selected="true" text="Cash" />
                 <JFXRadioButton fx:id="cheque" layoutX="398.0" layoutY="48.0" onMouseClicked="#paymode" text="Cheque" />
                 <JFXComboBox fx:id="cheque_no" layoutX="286.0" layoutY="84.0" prefHeight="26.0" prefWidth="180.0" promptText="Select Cheque ID" />
 
